# hdriver

./: .gitignore  README.md  setup.cfg
HMDriverClient/: client.py  element.py  exception.py  hdcstd.py  hmdriver.py  window.py
HMDriverClient/hap/: entry-default-unsigned.hap  entry-ohosTest-unsigned.hap
UiTestAPP/entry/src/ohosTest/ets/test/: Ability.test.ets  UiTestProcess.ets
