[metadata]
name = HMDriverClient
author = mrx1203
author-email = mrx102@163.com
summary = 鸿蒙UI自动化框架
license = MIT
home-page = https://github.com/mrx1203/HMDriver
description-file = README.md
keywords = 鸿蒙,自动化
classifier =
	Environment :: Console
	Intended Audience :: Developers
	Operating System :: OS Independent
	Programming Language :: Python

[options]
zip_safe = False
include_package_data = True
packages = find:

[options.package_data]
* =
    *.hap
    *.md

[files]
packages =
	HMDriverClient

